--- a/index.html
+++ b/index.html
@@ -1,174 +1,187 @@
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="style.css"/>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link type="text/css" rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<div class="navbar-basic" style="padding:5px;box-shadow:2px 2px 20px rgba(0,0,0,0.1);padding-top:10px;padding-left:15px;padding-bottom:1px;margin-bottom:20px;">
-			<p class="navbar-label" style="margin-top:5px;font-size:14px;color:#000;">
-						<img src="logo.svg" width="120px" style="margin-right:60px;"/>
+		<div class="navbar-basic">
+			<p class="navbar-label">
+		        <img src="logo.svg" width="120px" class="navbar-image"/>
 			</p>
 		</div>
-		<div class="jumbotron jumbo-hero" style="background-color:#fff;border-bottom:1px solid #eee;padding-bottom:15vh;background-image:url('hero.jpg');background-size:720px auto;background-repeat:no-repeat;background-position:20% 30%;height:95vh;">
-		<div class="container" style="padding-top:4vh;">
-			<div class="row">
-				<div class="col-sm-7 text-center">
-					<div style="width:100%;margin:0 auto;">
-					</div>
-					</div>
-				<div class="col-sm-5">
-					<div class="hero-text-box" style="margin-top:5vh;">
-						<p>Presented by:</p>
-						<img src="logo.svg" width="150px" style="margin-right:60px;"/>
-						<br/>
-						<br/>
-						<h1 style="line-height:2em;">
-							<strong>
-								<span class="hero-headline-one"style="Font-size:1.5em;">
-									AeroScan Pro	
-								</span>
-							</strong>
-
-						</h1>
-								Enter the zone with the most lightweight honeycomb shell available.
-Best in class sensors adjustable up to 16000 DPI.	
-
-						<br/>
-						<br/>
-						<br/>
-						<a href="" style="display:inline-block;padding:15px;border-radius:4px;width:100%;text-align:center;background-color:#000;color:#fff;">Order Now: $59.99 AUD</a>
-					</div>
-				</div>
-
-				</div>
-			</div>
+		<div class="jumbotron jumbo-hero">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-7 text-center"></div>
+                    <div class="col-sm-5">
+                        <div class="hero-text-box">
+                            <p>Presented by:</p>
+                            <img src="logo.svg" width="150px"/>
+                            <br/>
+                            <br/>
+                            <h1>
+                                <strong>
+                                    <span class="hero-headline-one">
+                                        AeroScan Pro	
+                                    </span>
+                                </strong>
+                            </h1>
+                            <p>
+                                Enter the zone with the most lightweight honeycomb shell available.
+                                Best in class sensors adjustable up to 16000 DPI.	
+                            </p>
+                            <br/>
+                            <a href="" class="btn-cta">Order Now: $59.99 AUD</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 		</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12"><div style="margin-top:100px;"></div></div>
-				<div class="col-sm-4 text-left">
-					<div style="padding:30px;padding-top:70px;">
-					<h2>Durable shell. Effortless glide.</h2>
-					<hr>
+        <div class="section-weight">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4 text-left">
+                        <div class="feature-text-box">
+                            <h2>Durable shell. Effortless glide.</h2>
+                            <hr>
+                            <p>
+                                Aerodynamic honeycomb design with smart 
+                                ergonomic construction enables the smooth 
+                                passage of airflow from hand-to-mouse during 
+                                gameplay; and creates an environment of 
+                                breathability for enhanced movement and 
+                                comfort during use, especially during periods 
+                                extended gameplay.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-sm-8 text-center">
+                        <div class="feature-image-container">
+                            <img src="5.webp" width="100%" class="feature-image">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3 text-center">
+                        <div class="panel-weight panel-weight-primary">
+                            <div class="panel-weight-circle">
+                                <span class="panel-weight-circle-text">45<small class="panel-weight-circle-gram">g</small></span>
+                            </div>
+                            <p>
+                                AeroScan Pro	
+                                <br/>
+                                <small>
+                                    <strong>TECHGEAR.PRO</strong>
+                                </small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 text-center">
+                        <div class="panel-weight">
+                            <div class="panel-weight-circle">
+                                <span class="panel-weight-circle-text">96<small>g</small></span>
+                            </div>
+                            <p>
+                                Deathadder
+                                <br/>
+                                <small>
+                                    <strong>RAZER</strong>
+                                </small>
+                            </p>
+                        </div>
+                    </div>
 
-						<p>Aerodynamic honeycomb design with smart ergonomic construction enables the smooth passage of airflow from hand-to-mouse during gameplay; and creates an environment of breathability for enhanced movement and comfort during use, especially during periods extended gameplay.</p>
-					</div>
-				</div>
-				<div class="col-sm-8 text-center">
-					<div style="box-shadow:2px 2px 70px rgba(0,0,0,0.2);border-radius:10px;width:100%;margin:0 auto;margin-top:0px;">
-					<img src="5.webp" width="100%" style="border-radius:10px;">
-					</div>
-				</div>
-				<div class="col-sm-12"><div style="margin-top:100px;"></div></div>
-				<div class="col-sm-3 text-center">
-					<div style="background-color:#000;border-radius:10px;box-shadow:2px 2px 100px rgba(0,0,0,0.1);padding:50px;color:#fff;">
-					<div style="width:120px;height:120px;border-radius:50%;margin:0 auto;padding-top:5px;margin-bottom:20px;">
-						<span style="font-size:4em;">45<small style="font-size:16px;">g</small></span>
-					</div>
-					<p>
-						AeroScan Pro	
-						<br/>
-						<small>
-							<strong>TECHGEAR.PRO</strong>
-						</small>
-					</p>
-					</div>
-				</div>
-				<div class="col-sm-3 text-center">
-					<div style="background-color:#fff;border-radius:10px;box-shadow:2px 2px 100px rgba(0,0,0,0.1);padding:50px;">
-					<div style="width:120px;height:120px;border-radius:50%;;margin:0 auto;padding-top:5px;margin-bottom:20px;">
-						<span style="font-size:4em;">96<small style="font-size:16px;">g</small></span>
-					</div>
-					<p>
-						Deathadder
-						<br/>
-						<small>
-							<strong>RAZER</strong>
-						</small>
-					</p>
-					</div>
-				</div>
+                    <div class="col-sm-3 text-center">
+                        <div class="panel-weight">
+                            <div class="panel-weight-circle">
+                                <span class="panel-weight-circle-text">87<small class="panel-weight-circle-gram">g</small></span>
+                            </div>
+                            <p>
+                                G403
+                                <br/>
+                                <small>
+                                    <strong>LOGITECH</strong>
+                                </small>
+                            </p>
+                        </div>
+                    </div>
 
-				<div class="col-sm-3 text-center">
-					<div style="background-color:#fff;border-radius:10px;box-shadow:2px 2px 100px rgba(0,0,0,0.1);padding:50px;">
-					<div style="width:120px;height:120px;border-radius:50%;;margin:0 auto;padding-top:5px;margin-bottom:20px;">
-						<span style="font-size:4em;">87<small style="font-size:16px;">g</small></span>
-					</div>
-					<p>
-						G403
-						<br/>
-						<small>
-							<strong>LOGITECH</strong>
-						</small>
-					</p>
-					</div>
-				</div>
+                    <div class="col-sm-3 text-center">
+                        <div class="panel-weight">
+                            <div class="panel-weight-circle">
+                                <span class="panel-weight-circle-text">58<small class="panel-weight-circle-gram">g</small></span>
+                            </div>
+                            <p>
+                                Air58 Ninja	
+                                <br/>
+                                <small>
+                                    <strong>FINALMOUSE</strong>
+                                </small>
+                            </p>
+                        </div>
+                    </div>
+                    </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 text-center">
+                            <div class="headline-block">
+                                <h2 class="headline-block-title">
+                                    Powerful <strong>PIXART PMW-3389</strong> optical 
+                                    sensor up to <br/>
+                                    <span style="font-size:5em;">
+                                        16000 DPI
+                                    </span>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-specs">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-8 text-center">
+                                <div class="feature-image-container">
+                                    <img src="6.webp" width="100%" class="feature-image">
+                                </div>
+                            </div>
+                            <div class="col-sm-4 text-left">
+                                <div class="feature-text-box feature-text-box-specs">
+                                    <h2>Specifications</h2>
+                                    <hr>
+                                    <p style='font-size:14px;line-height:2em;'>
+                                        Size:            <strong class="float:right;display:inline-block;;">104*61*36mm</strong>
+                                        <br/>
+                                        Weight:        <strong class="float:right;display:inline-block;;">45G (Not including color box)</strong>
+                                        <br/>
+                                        Material:      <strong class="float:right;display:inline-block;;">ABS+PC</strong>
+                                        <br/>
+                                        DPI:               <strong class="float:right;display:inline-block;;">100-160000 DPI </strong>
+                                        <br/>
+                                        Button Qty:  <strong class="float:right;display:inline-block;;">6D</strong>
+                                        <br/>
+                                        Switch:         <strong class="float:right;display:inline-block;;">Omron Brand</strong>
+                                        <br/>
+                                        Switch Life:  <strong class="float:right;display:inline-block;;">2KW Times</strong>
+                                        <br/>
+                                        Os System:  <strong class="float:right;">Windows XP/98/Vista/Me/2000/ Win7/8/10/Mac Os</strong>
+                                        <br/>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
+                            <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
+                            <div class="col-sm-12 text-center">
+                                <div style="margin-bottom:15vh;">
+                                    <h2>Get over <strong>50 MILLION CLICKS</strong> with<br/> <span style="font-size:1.3em;"><strong>OMRON ENGINEERED SWITCHES<strong></span></h2>
+                                </div>
 
-				<div class="col-sm-3 text-center">
-					<div style="background-color:#fff;border-radius:10px;box-shadow:2px 2px 100px rgba(0,0,0,0.1);padding:50px;">
-					<div style="width:120px;height:120px;border-radius:50%;;margin:0 auto;padding-top:5px;margin-bottom:20px;">
-						<span style="font-size:4em;">58<small style="font-size:16px;">g</small></span>
-					</div>
-					<p>
-						Air58 Ninja	
-						<br/>
-						<small>
-							<strong>FINALMOUSE</strong>
-						</small>
-					</p>
-				</div>
-					</div>
-				<div class="col-sm-12"><div style="margin-top:100px;"></div></div>
-				<div class="col-sm-12"><div style="margin-top:100px;"></div></div>
-				<div class="col-sm-12"><div style="margin-top:100px;"></div></div>
-				<div class="col-sm-12 text-center">
-					<div style="margin-bottom:15vh;">
-						<h2 style="font-size:1.5em;">Powerful <strong>PIXART PMW-3389</strong> optical sensor up to <br/> <span style="font-size:5em;">16000 DPI</span></h2>
-					</div>
+                            </div>
+                            <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
 
-				</div>
-				<div class="col-sm-12"><div style="margin-top:100px;"></div></div>
-				<div class="col-sm-8 text-center">
-					<div style="box-shadow:2px 2px 70px rgba(0,0,0,0.2);border-radius:10px;width:100%;margin:0 auto;margin-top:0px;">
-					<img src="6.webp" width="100%" style="border-radius:10px;">
-					</div>
-				</div>
-				<div class="col-sm-4 text-left">
-					<div style="padding:50px;padding-top:20px;">
-					<h2>Specifications</h2>
-					<hr>
-					<p style='font-size:14px;line-height:2em;'>
-						Size:            <strong class="float:right;display:inline-block;;">104*61*36mm</strong>
-						<br/>
-						Weight:        <strong class="float:right;display:inline-block;;">45G (Not including color box)</strong>
-						<br/>
-						Material:      <strong class="float:right;display:inline-block;;">ABS+PC</strong>
-						<br/>
-						DPI:               <strong class="float:right;display:inline-block;;">100-160000 DPI </strong>
-						<br/>
-						Button Qty:  <strong class="float:right;display:inline-block;;">6D</strong>
-						<br/>
-						Switch:         <strong class="float:right;display:inline-block;;">Omron Brand</strong>
-						<br/>
-						Switch Life:  <strong class="float:right;display:inline-block;;">2KW Times</strong>
-						<br/>
-						Os System:  <strong class="float:right;">Windows XP/98/Vista/Me/2000/ Win7/8/10/Mac Os</strong>
-						<br/>
-					</p>
-					</div>
-				</div>
-				<div class="col-sm-12"><div style="margin-top:100px;"></div></div>
-				<div class="col-sm-12"><div style="margin-top:100px;"></div></div>
-				<div class="col-sm-12 text-center">
-					<div style="margin-bottom:15vh;">
-						<h2>Get over <strong>50 MILLION CLICKS</strong> with<br/> <span style="font-size:1.3em;"><strong>OMRON ENGINEERED SWITCHES<strong></span></h2>
-					</div>
-
-				</div>
-				<div class="col-sm-12"><div style="margin-top:100px;"></div></div>
-
-			</div>
+                    </div>
+                </div>
 
 	</body>
 </html>
