--- a/index.html
+++ b/index.html
@@ -123,10 +123,12 @@
                     </div>
                     </div>
                 </div>
+                <div class="section-scanner">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 text-center">
                             <div class="headline-block">
+                                <div class="cta-scanner-zoom" style="">
                                 <h2 class="headline-block-title">
                                     Powerful <strong>PIXART PMW-3389</strong> optical 
                                     sensor up to <br/>
@@ -134,9 +136,11 @@
                                         16000 DPI
                                     </span>
                                 </h2>
+                                </div>
                             </div>
                         </div>
                     </div>
+                </div>
                 </div>
                 <div class="section-specs">
                     <div class="container">
@@ -150,22 +154,22 @@
                                 <div class="feature-text-box feature-text-box-specs">
                                     <h2>Specifications</h2>
                                     <hr>
-                                    <p style='font-size:14px;line-height:2em;'>
-                                        Size:            <strong class="float:right;display:inline-block;;">104*61*36mm</strong>
+                                    <p>
+                                        Size:            <strong>104*61*36mm</strong>
                                         <br/>
-                                        Weight:        <strong class="float:right;display:inline-block;;">45G (Not including color box)</strong>
+                                        Weight:        <strong>45G (Not including color box)</strong>
                                         <br/>
-                                        Material:      <strong class="float:right;display:inline-block;;">ABS+PC</strong>
+                                        Material:      <strong>ABS+PC</strong>
                                         <br/>
-                                        DPI:               <strong class="float:right;display:inline-block;;">100-160000 DPI </strong>
+                                        DPI:               <strong>100-160000 DPI </strong>
                                         <br/>
-                                        Button Qty:  <strong class="float:right;display:inline-block;;">6D</strong>
+                                        Button Qty:  <strong>6D</strong>
                                         <br/>
-                                        Switch:         <strong class="float:right;display:inline-block;;">Omron Brand</strong>
+                                        Switch:         <strong>Omron Brand</strong>
                                         <br/>
-                                        Switch Life:  <strong class="float:right;display:inline-block;;">2KW Times</strong>
+                                        Switch Life:  <strong>2KW Times</strong>
                                         <br/>
-                                        Os System:  <strong class="float:right;">Windows XP/98/Vista/Me/2000/ Win7/8/10/Mac Os</strong>
+                                        Os System:  <strong>Windows XP/98/Vista/Me/2000/ Win7/8/10/Mac Os</strong>
                                         <br/>
                                     </p>
                                 </div>
