--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 Best in class sensors adjustable up to 16000 DPI.	
                             </p>
                             <br/>
-                            <a href="" class="btn-cta">Order Now: $59.99 AUD</a>
+                            <a href="/contact.php" class="btn-cta">Order Now: $59.99 AUD</a>
                         </div>
                     </div>
                 </div>
@@ -177,14 +177,33 @@
                             <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
                             <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
                             <div class="col-sm-12 text-center">
-                                <div style="margin-bottom:15vh;">
-                                    <h2>Get over <strong>50 MILLION CLICKS</strong> with<br/> <span style="font-size:1.3em;"><strong>OMRON ENGINEERED SWITCHES<strong></span></h2>
+                                <div style="margin-bottom:10vh;">
+                                    <h2>Global delivery with free shipping.</h2>
+                                    <p>Packaged with care and delivered with love.</p>
+                            <a href="" class="btn-cta">Order Now: $59.99 AUD</a>
+
                                 </div>
 
                             </div>
                             <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
 
                     </div>
+                </div>
+                </div>
+                </div>
+                <div class="footer" style="border-top:1px solid #eee;padding-top:10vh;padding-bottom:10vh;background-color:#fafafa;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-4 text-center">
+                                <img src="logo.svg" width="120px;"/>
+                            </div>
+                            <div class="col-sm-4 text-center">
+                                <a href="/">AeroScan Pro</a>
+                            </div>
+                            <div class="col-sm-4 text-center">
+                                <a href="/contact.php">Contact Us</a>
+                            </div>
+                        </div>
                 </div>
 
 	</body>
