--- a/index.html
+++ b/index.html
@@ -174,16 +174,61 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
+                            <div class="col-sm-12 text-center">
+                                <p style="font-weight:700;margin-bottom:-100px;font-size:11em;color:#fff;text-shadow:2px 2px 300px rgba(0,0,0,0.4);text-stroke:1px black;">GREAT FOR</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 text-center">
+                                <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
+
+                                    <img src="val.jpg" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                                </div>
+                                <br/>
+                                <p>
+                                    <strong>
+                                        Valorant
+                                    </strong>
+                                </p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 text-center">
+                                <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
+                                    <img src="fort.jpg" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                                </div>
+                                <br/>
+                                <p>
+                                    <strong>
+                                        Fortnite
+                                    </strong>
+                                </p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 text-center">
+                                <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
+                                    <img src="league.webp" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                                </div>
+                                <br/>
+                                <p>
+                                    <strong>
+                                        League Of Legends
+                                    </strong>
+                                </p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 text-center">
+                                <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
+                                    <img src="csgo3.jpg" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                                </div>
+                                <br/>
+                                <p>
+                                    <strong>
+                                        CounterStrike: Global Offensive
+                                    </strong>
+                                </p>
+                            </div>
                             <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
                             <div class="col-sm-12 text-center">
-                                <div style="margin-bottom:10vh;">
-                                    <h2>Global delivery with free shipping.</h2>
-                                    <p>Packaged with care and delivered with love.</p>
-                            <a href="" class="btn-cta">Order Now: $59.99 AUD</a>
-
+                                <div style="margin-bottom:5vh;">
+                                    <h2>Global delivery with free shipping</h2>
+                                    <p>Packaged with care and delivered with love</p>
+                                    <a href="" class="btn-cta">Order Now: $59.99 AUD</a>
                                 </div>
-
                             </div>
                             <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
 
