--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link type="text/css" rel="stylesheet" href="style.css"/>
+		<link type="text/css" rel="stylesheet" href="/lib/css/style.css"/>
 	</head>
 	<body>
 		<div class="navbar-basic">
 			<p class="navbar-label">
-		        <img src="logo.svg" width="120px" class="navbar-image"/>
+		        <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
 			</p>
 		</div>
 		<div class="jumbotron jumbo-hero">
@@ -16,7 +16,7 @@
                     <div class="col-sm-5">
                         <div class="hero-text-box">
                             <p>Presented by:</p>
-                            <img src="logo.svg" width="150px"/>
+                            <img src="/lib/img/logo.svg" width="150px"/>
                             <br/>
                             <br/>
                             <h1>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-sm-8 text-center">
                         <div class="feature-image-container">
-                            <img src="5.webp" width="100%" class="feature-image">
+                            <img src="/lib/img/5.webp" width="100%" class="feature-image">
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                         <div class="row">
                             <div class="col-sm-8 text-center">
                                 <div class="feature-image-container">
-                                    <img src="6.webp" width="100%" class="feature-image">
+                                    <img src="/lib/img/6.webp" width="100%" class="feature-image">
                                 </div>
                             </div>
                             <div class="col-sm-4 text-left">
@@ -180,7 +180,7 @@
                             <div class="col-sm-12 col-md-3 text-center">
                                 <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
 
-                                    <img src="val.jpg" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                                    <img src="/lib/img/val.jpg" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -191,7 +191,7 @@
                             </div>
                             <div class="col-sm-12 col-md-3 text-center">
                                 <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
-                                    <img src="fort.jpg" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                                    <img src="/lib/img/fort.jpg" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -202,7 +202,7 @@
                             </div>
                             <div class="col-sm-12 col-md-3 text-center">
                                 <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
-                                    <img src="league.webp" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                                    <img src="/lib/img/league.webp" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -213,7 +213,7 @@
                             </div>
                             <div class="col-sm-12 col-md-3 text-center">
                                 <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
-                                    <img src="csgo3.jpg" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                                    <img src="/lib/img/csgo3.jpg" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
                                 </div>
                                 <br/>
                                 <p>
