--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-4 text-center">
-                                <img src="logo.svg" width="120px;"/>
+                                <img src="/lib/img/logo.svg" width="120px;"/>
                             </div>
                             <div class="col-sm-4 text-center">
                                 <a href="/">AeroScan Pro</a>
