--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
 	<body>
 		<div class="navbar-basic">
 			<p class="navbar-label">
-		        <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
+                <a href="/">
+    		        <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
+                </a>
 			</p>
 		</div>
 		<div class="jumbotron jumbo-hero">
@@ -227,7 +229,7 @@
                                 <div style="margin-bottom:5vh;">
                                     <h2>Global delivery with free shipping</h2>
                                     <p>Packaged with care and delivered with love</p>
-                                    <a href="" class="btn-cta">Order Now: $59.99 AUD</a>
+                                    <a href="/contact.php" class="btn-cta">Order Now: $59.99 AUD</a>
                                 </div>
                             </div>
                             <div class="col-sm-12"><div style="margin-top:100px;"></div></div>
