--- a/public/success.html
+++ b/public/success.html
@@ -4,12 +4,21 @@
 		<link type="text/css" rel="stylesheet" href="/lib/css/style.css"/>
 	</head>
 	<body>
-		<div class="navbar-basic">
-			<p class="navbar-label">
-                <a href="/">
-                    <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
-                </a>
-			</p>
+  		<div class="navbar-basic">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="navbar-label">
+                            <a href="/">
+                                <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
+                            </a>
+                        </p>
+                    </div>
+                    <div class="col-sm-6 text-right">
+                        <a href="/contact.php" class="btn-cta">Order Now: $59.99</a>
+                    </div>
+                </div>
+            </div>
 		</div>
 		<div class="jumbotron jumbo-hero" style="border-bottom:0px;">
             <div class="container">
@@ -37,6 +46,7 @@
                                 <a href="/contact.php">Contact Us</a>
                             </div>
                         </div>
+                    </div>
                 </div>
 
 	</body>
