--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,20 @@
 	</head>
 	<body>
 		<div class="navbar-basic">
-			<p class="navbar-label">
-                <a href="/">
-    		        <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
-                </a>
-			</p>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="navbar-label">
+                            <a href="/">
+                                <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
+                            </a>
+                        </p>
+                    </div>
+                    <div class="col-sm-6 text-right">
+                        <a href="/contact.php" class="btn-cta">Order Now: $59.99</a>
+                    </div>
+                </div>
+            </div>
 		</div>
 		<div class="jumbotron jumbo-hero">
             <div class="container">
