--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,9 @@
 <html>
 	<head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link type="text/css" rel="stylesheet" href="/lib/css/style.css"/>
 	</head>
@@ -24,7 +28,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-7 text-center"></div>
-                    <div class="col-sm-5">
+                    <div class="col-sm-12 col-lg-5">
                         <div class="hero-text-box">
                             <p>Presented by:</p>
                             <img src="/lib/img/logo.svg" width="150px"/>
