--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link type="text/css" rel="stylesheet" href="/lib/css/style.css"/>
@@ -27,13 +30,9 @@
 		<div class="jumbotron jumbo-hero">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-7 text-center"></div>
-                    <div class="col-sm-12 col-lg-5">
+                    <div class="col-sm-6 text-center"></div>
+                    <div class="col-sm-12 col-lg-6">
                         <div class="hero-text-box">
-                            <p>Presented by:</p>
-                            <img src="/lib/img/logo.svg" width="150px"/>
-                            <br/>
-                            <br/>
                             <h1>
                                 <strong>
                                     <span class="hero-headline-one">
@@ -43,6 +42,7 @@
                             </h1>
                             <p>
                                 Enter the zone with the most lightweight honeycomb shell available.
+                                <br/>
                                 Best in class sensors adjustable up to 16000 DPI.	
                             </p>
                             <br/>
@@ -55,9 +55,9 @@
         <div class="section-weight">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4 text-left">
+                    <div class="col-12 col-lg-4 text-left">
                         <div class="feature-text-box">
-                            <h2>Durable shell. Effortless glide.</h2>
+                            <h2>Durable shell. <br/>Effortless glide.</h2>
                             <hr>
                             <p>
                                 Aerodynamic honeycomb design with smart 
@@ -70,18 +70,16 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-sm-8 text-center">
+                    <div class="col-12 col-lg-8 text-center">
                         <div class="feature-image-container">
                             <img src="/lib/img/5.webp" width="100%" class="feature-image">
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3 text-center">
+                    <div class="col-6 col-md-3 text-center">
                         <div class="panel-weight panel-weight-primary">
-                            <div class="panel-weight-circle">
                                 <span class="panel-weight-circle-text">45<small class="panel-weight-circle-gram">g</small></span>
-                            </div>
                             <p>
                                 AeroScan Pro	
                                 <br/>
@@ -91,11 +89,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-sm-3 text-center">
+                    <div class="col-6 col-md-3 text-center">
                         <div class="panel-weight">
-                            <div class="panel-weight-circle">
-                                <span class="panel-weight-circle-text">96<small>g</small></span>
-                            </div>
+                                <span class="panel-weight-circle-text">96<small class="panel-weight-circle-gram">g</small></span>
                             <p>
                                 Deathadder
                                 <br/>
@@ -106,11 +102,9 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-3 text-center">
+                    <div class="col-6 col-md-3 text-center">
                         <div class="panel-weight">
-                            <div class="panel-weight-circle">
                                 <span class="panel-weight-circle-text">87<small class="panel-weight-circle-gram">g</small></span>
-                            </div>
                             <p>
                                 G403
                                 <br/>
@@ -121,11 +115,9 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-3 text-center">
+                    <div class="col-6 col-md-3 text-center">
                         <div class="panel-weight">
-                            <div class="panel-weight-circle">
                                 <span class="panel-weight-circle-text">58<small class="panel-weight-circle-gram">g</small></span>
-                            </div>
                             <p>
                                 Air58 Ninja	
                                 <br/>
@@ -141,13 +133,13 @@
                 <div class="section-scanner">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-12 text-center">
+                        <div class="col-12 text-center">
                             <div class="headline-block">
                                 <div class="cta-scanner-zoom" style="">
                                 <h2 class="headline-block-title">
                                     Powerful <strong>PIXART PMW-3389</strong> optical 
                                     sensor up to <br/>
-                                    <span style="font-size:5em;">
+                                    <span>
                                         16000 DPI
                                     </span>
                                 </h2>
@@ -160,12 +152,12 @@
                 <div class="section-specs">
                     <div class="container">
                         <div class="row">
-                            <div class="col-sm-8 text-center">
+                            <div class="col-12 col-lg-8 text-center">
                                 <div class="feature-image-container">
                                     <img src="/lib/img/6.webp" width="100%" class="feature-image">
                                 </div>
                             </div>
-                            <div class="col-sm-4 text-left">
+                            <div class="col-12 col-lg-4 text-left">
                                 <div class="feature-text-box feature-text-box-specs">
                                     <h2>Specifications</h2>
                                     <hr>
