--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@
 		<div class="navbar-basic">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-6">
                         <p class="navbar-label">
                             <a href="/">
                                 <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
                             </a>
                         </p>
                     </div>
-                    <div class="col-sm-6 text-right">
-                        <a href="/contact.php" class="btn-cta">Order Now: $59.99</a>
+                    <div class="col-6 text-right">
+                        <a href="/contact.php" class="btn-cta">Order Now</a>
                     </div>
                 </div>
             </div>
@@ -182,12 +182,12 @@
                                 </div>
                             </div>
                             <div class="col-sm-12 text-center">
-                                <p style="font-weight:700;margin-bottom:-100px;font-size:11em;color:#fff;text-shadow:2px 2px 300px rgba(0,0,0,0.4);text-stroke:1px black;">GREAT FOR</p>
+                                <p class="games-headline">GREAT FOR</p>
                             </div>
-                            <div class="col-sm-12 col-md-3 text-center">
-                                <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
+                            <div class="col-12 col-md-6 col-lg-3 text-center">
+                                <div class="games-image-box">
 
-                                    <img src="/lib/img/val.jpg" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                                    <img src="/lib/img/val.jpg" class="games-image"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -196,9 +196,9 @@
                                     </strong>
                                 </p>
                             </div>
-                            <div class="col-sm-12 col-md-3 text-center">
-                                <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
-                                    <img src="/lib/img/fort.jpg" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                            <div class="col-12 col-md-6 col-lg-3 text-center">
+                                <div class="games-image-box">
+                                    <img src="/lib/img/fort.jpg" class="games-image"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -207,9 +207,9 @@
                                     </strong>
                                 </p>
                             </div>
-                            <div class="col-sm-12 col-md-3 text-center">
-                                <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
-                                    <img src="/lib/img/league.webp" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                            <div class="col-12 col-md-6 col-lg-3 text-center">
+                                <div class="games-image-box">
+                                    <img src="/lib/img/league.webp" class="games-image"/>
                                 </div>
                                 <br/>
                                 <p>
@@ -218,9 +218,9 @@
                                     </strong>
                                 </p>
                             </div>
-                            <div class="col-sm-12 col-md-3 text-center">
-                                <div style="box-shadow:2px 2px 50px rgba(0,0,0,0.2);border-radius:10px;">
-                                    <img src="/lib/img/csgo3.jpg" width="100%;" style="object-fit:cover;width:100%;height:140px;border-radius:10px;"/>
+                            <div class="col-12 col-md-6 col-lg-3 text-center">
+                                <div class="games-image-box">
+                                    <img src="/lib/img/csgo3.jpg" class="games-image" />
                                 </div>
                                 <br/>
                                 <p>
@@ -243,7 +243,7 @@
                 </div>
                 </div>
                 </div>
-                <div class="footer" style="border-top:1px solid #eee;padding-top:10vh;padding-bottom:10vh;background-color:#fafafa;">
+                <div class="footer">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-4 text-center">
