--- a/public/success.html
+++ b/public/success.html
@@ -4,18 +4,18 @@
 		<link type="text/css" rel="stylesheet" href="/lib/css/style.css"/>
 	</head>
 	<body>
-  		<div class="navbar-basic">
+		<div class="navbar-basic">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-6">
                         <p class="navbar-label">
                             <a href="/">
                                 <img src="/lib/img/logo.svg" width="120px" class="navbar-image"/>
                             </a>
                         </p>
                     </div>
-                    <div class="col-sm-6 text-right">
-                        <a href="/contact.php" class="btn-cta">Order Now: $59.99</a>
+                    <div class="col-6 text-right">
+                        <a href="/contact.php" class="btn-cta">Order Now</a>
                     </div>
                 </div>
             </div>
