--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,9 @@
                                 </strong>
                             </h1>
                             <p>
-                                Enter the zone with the most lightweight honeycomb shell available.
-                                <br/>
-                                Best in class sensors adjustable up to 16000 DPI.	
+                                High performance esports mouse featuring the Pixart PWM 3389 sensor, Omron switches, light weight shell and physical polling rate toggle. This is the mouse for esports professionals.
                             </p>
-                            <br/>
-                            <a href="/contact.php" class="btn-cta">Order Now: $59.99 AUD</a>
+                        <a href="/contact.php" class="btn-cta">Order Now: $59.99 AUD</a>
                         </div>
                     </div>
                 </div>
