--- a/public/index.html
+++ b/public/index.html
@@ -181,6 +181,31 @@
                                     </p>
                                 </div>
                             </div>
+			</div>
+			</div>
+		</div>
+		<div class="section-wire">
+			<div class="container-fluid">
+			<div class="row g-0">
+				<div class="col-12 col-lg-7">
+					<img src="/lib/img/wire.webp" class="section-wire-image">
+				</div>
+				<div class="col-12 col-lg-5">
+					<div class="section-wire-text-box">
+						<p class="section-wire-subheading"><strong>UMBRELLA ROPE</strong></p>
+					<h2 class="section-wire-heading">Super Flexible</h2>
+					<p>
+						The <strong>AeroScan Pro</strong> wire is weaved from super flexible umbrella rope. 
+						Umbrella rope is designed to be lightweight with minimal drag and no binding.
+						Features self-contained Velcro for cord management.
+					</p>
+					</div>
+				</div>
+			</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
                             <div class="col-sm-12 text-center">
                                 <p class="games-headline">GREAT FOR</p>
                             </div>
